fix: set traffic policy to local

--- a/traefik/fleet.yaml
+++ b/traefik/fleet.yaml
@@ -33,6 +33,9 @@ helm:
       - name: config-traefik-middlewares
         mountPath: /providers
         type: configMap
+    services:
+      spec:
+        externalTrafficPolicy: Local
     pilot:
       enabled: true
       token: "cf3cf80a-b07f-408a-a7c0-02fcb74ab8ee"
